fixed icon alignment faq section

--- a/css/style.css
+++ b/css/style.css
@@ -302,10 +302,15 @@ main a {
     padding-bottom: 40px;
     border-bottom: 2px solid black;
 }
+/*
 .fa-solid.fa-chevron-down{
     display: flex;
     justify-content: flex-end;
-    /*ricorda di centrare testo e freccia dopo*/
+}*/
+.faq-list li {
+    display: flex;
+    gap: 440px;
+
 }
 /*footer*/
 .footer-nav {
